# RoboticsLab-Social-Cost-Map-Project

./: CMakeLists.txt  README.md  package.xml
config/: amcl.yaml  iiwa_controllers.yaml  slam.yaml  social_params.yaml
launch/: costmap.launch.py  iiwa_routine.launch.py  people.launch.py  simulation.launch.py  slam.launch.py
maps/: my_map.pgm  my_map.yaml
models/3D_Dollhouse_Sofa/: model.sdf
models/Hammer/: model.config  model.sdf
models/Sofa/: model.sdf
models/Standing person/: model.sdf
models/actor - relative paths/: model.sdf
models/aruco_marker/: model.sdf
models/aruco_marker1/: model.sdf
models/aruco_marker2/: model.sdf
models/aruco_marker3/: model.config  model.sdf
models/garage_door/: model.config  model.sdf
models/garage_door/material/script/: garage_door.material
models/landing_sign/: landing-sign.sdf  model.config
models/male_visitor/: model.sdf
models/male_visitor2/: model.sdf
models/monkey_wrench/: model.config
models/tv_65in_emissive/: model.sdf
moveit2/: iiwa_joint_limits.yaml  ompl_planning.yaml
rviz_conf/: navigation_view.rviz  slam_view.rviz
src/: fra2mo_navigation.cpp  iiwa_cube_routine.cpp  iiwa_cube_routine_OLD.cpp  social_costmap_bridge.cpp
srdf/: iiwa.srdf.xacro  iiwa_macro.srdf.xacro  iiwa_macro.srdf_OLD.xacro
urdf/fra2mo/: fra2mo.urdf.xacro  fra2mo_base_macro.xacro  lidar_gazebo_macro.xacro
urdf/iiwa/: iiwa.urdf.xacro  iiwa_camera.xacro  iiwa_r2c_simplified.xacro  iiwa_spawn.urdf.xacro
worlds/: Mondo.sdf
